fix about me on iphones

--- a/css/style.scss
+++ b/css/style.scss
@@ -651,3 +651,23 @@ main {
 	}
 }
 
+@media only  screen and (max-width: 667px) {
+	#about-me {
+		.wrapper {
+			#about-me-content {
+				h1 {
+					font-size: 20px;
+					width: 180px;
+				}
+			}
+		}
+	}
+	#achievements {
+		.wrapper {
+			h1 {
+				font-size: 20px;
+				width: 180px;
+			}
+		}
+	}
+}
